--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,44 @@
-
-# BEGIN WordPress
+# BEGIN WordPress Skeleton
 <IfModule mod_rewrite.c>
-RewriteEngine On
-RewriteBase /
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+        RewriteEngine On
+        RewriteBase /
+
+        # Iternally rewrite requests to document root as /wp/index.php
+        RewriteCond %{REQUEST_URI} ^/$
+        ReWriteRule ^(.*)$ /wp/index.php [L]
+
+        # Internally rewrite /wp/*.php|html|txt files as /*.php|html|txt
+        RewriteCond %{REQUEST_URI} ^/(.*)\.(php|html|txt)$
+        RewriteCond %{REQUEST_URI} !^/wp/.*$
+        RewriteRule ^(.*)$ /wp/$1 [L]
+
+        # Internally rewrite /wp/wp-admin as /wp-admin
+        RewriteCond %{REQUEST_URI} ^/wp-admin/.*$
+        RewriteCond %{REQUEST_URI} !^/wp/wp-admin/.*$
+        RewriteRule ^(.*)$ /wp/$1 [L]
+
+        # Internally rewrite /wp/wp-includes as /wp-includes
+        RewriteCond %{REQUEST_URI} ^/wp-includes/.*$
+        RewriteCond %{REQUEST_URI} !^/wp/wp-includes/.*$
+        RewriteRule ^(.*)$ /wp/$1 [L]
+
+	# Internally rewrite /wp/wp-content/themes/* as /wp-content/themes/*
+        RewriteCond %{REQUEST_URI} ^/wp-content/themes/.*$
+        RewriteCond %{REQUEST_URI} !^/wp/wp-content/themes/.*$
+        RewriteRule ^(.*)$ /wp/$1 [L]
+     
+        
 </IfModule>
-# END WordPress
+# END wp Skeleton
+
+# BEGIN wp
+<IfModule mod_rewrite.c>
+        RewriteEngine On
+        RewriteBase /
+
+        RewriteRule ^index\.php$ - [L]
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteRule . /index.php [L]
+</IfModule>
+# END wp
